--- a/package.json
+++ b/package.json
@@ -9,12 +9,32 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@vercel/postgres": "^0.10.0",
+    "animate.css": "^4.1.1",
+    "bcrypt": "^5.1.1",
+    "date-fns": "^4.1.0",
+    "framer-motion": "^12.0.5",
+    "gsap": "^3.12.7",
+    "https": "^1.0.0",
+    "jimp": "^1.6.0",
+    "next": "15.1.2",
+    "next-auth": "^4.24.11",
+    "next-pwa": "^5.6.0",
     "react": "^19.0.0",
+    "react-confetti": "^6.2.2",
     "react-dom": "^19.0.0",
-    "next": "15.1.2"
+    "react-easy-crop": "^5.2.0",
+    "react-fonts": "^1.1.1",
+    "react-icons": "^5.4.0",
+    "react-image-crop": "^8.6.12",
+    "react-pin-field": "^4.0.2",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
+    "@types/react": "^19.0.8",
     "postcss": "^8",
+    "prettier": "^3.4.2",
     "tailwindcss": "^3.4.1"
   }
 }
